--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ header h1 {
 }
 
 .btn:hover {
-  background-color: #f5f4f4;
-  color: black;
-  border: 1px solid black;
+  background-color: #f5f4f4 !important;
+  color: black !important;
+  border: 1px solid black !important;
 }
 
 .btn-link {
